--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico">
 <link rel="shortcut icon" href="images/favicon.ico" />
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href={{"/css/style.css"}}>
 <script src="js/jquery.js"></script>
 <script src="js/jquery-migrate-1.1.1.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
