--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Bizness Analytics ! Advanced Analytics Consulting | Big Data Research</title>
+<title>{{ page.title }}</title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href={{"/images/favicon.ico"}}>
