--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,9 @@
      </div> 
     </div> 
   </section>
-  
+</header>
+	
+<main>
   <section class="page1_header">
     <div class="container">
       <div class="row">
@@ -102,7 +104,7 @@
       </div>
     </div>
   </section>
-</header>
+</main>
 
 <div class="block-1">
   <div class="container">
