--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,16 @@ header h1 a {
 header h1.stuck_head {
   opacity: 0;
 }
+
+main{
+  color: rgba(0, 177, 186, 1);
+  display: block;
+  position: relative;
+  z-index: 999;
+  padding: 18px 0 77px;
+  background: url(../images/slide.jpg) center 0 no-repeat;
+}
+
 .page1_header {
   font-weight: 300;
   font-size: 30px;
