--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -45,7 +45,7 @@
       <div class="grid_12 rel">
         <h1>
           <a href="index.html">
-            <img src="images/logo.png" alt="Logo alt">
+            <img src="http://www.biznessanalytics.com/images/logo.png" alt="Logo alt">
           </a>
         </h1>
       </div>
